--- a/demo4Refresh/build.gradle
+++ b/demo4Refresh/build.gradle
@@ -1,7 +1,11 @@
-apply from:'https://raw.githubusercontent.com/lsjwzh/widget.gradle/master/app.gradle'
+apply from:'https://raw.githubusercontent.com/lsjwzh/widget.gradle/master/app-androidx.gradle'
 
 
 dependencies {
-    compile 'me.zhanghai.android.materialprogressbar:library:1.4.2'
-    compile project(":widget.pulltorefresh")
+    configurations {
+        all*.exclude group: 'com.android.support'
+    }
+    implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
+    implementation project(":widget.pulltorefresh")
+    implementation project(':powerfulscrollview')
 }
