--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,3 @@
-include ':demo4Refresh', ':widget.pulltorefresh',
-        ':..:widget.powerfulscrollview'
+include ':demo4Refresh', ':widget.pulltorefresh'
+include 'powerfulscrollview'
+project(':powerfulscrollview').projectDir =  file(rootDir.parent + '/widget.powerfulscrollview')
