--- a/widget.pulltorefresh/gradle.properties
+++ b/widget.pulltorefresh/gradle.properties
@@ -1,3 +1,5 @@
 projName=PullToRefresh
 projGroupId=com.lsjwzh.widget
 mavenName=PullToRefresh
+android.useAndroidX=true
+android.enableJetifier=true
