--- a/demo4Refresh/build.gradle
+++ b/demo4Refresh/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     }
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
     implementation project(":widget.pulltorefresh")
-    implementation project(':powerfulscrollview')
+//    implementation project(':powerfulscrollview')
+    implementation 'com.github.lsjwzh:PowerfulScrollView-Core:1.2.0.59-androidx3'
 }
