--- a/widget.pulltorefresh/build.gradle
+++ b/widget.pulltorefresh/build.gradle
@@ -4,8 +4,8 @@ apply from:'https://raw.githubusercontent.com/lsjwzh/widget.gradle/master/lib-an
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-//    implementation 'com.lsjwzh.widget:PowerfulScrollView:1.2.0.33'
-    implementation project(':powerfulscrollview')
+    implementation 'com.github.lsjwzh:PowerfulScrollView-Core:1.2.0.59-androidx3'
+//    implementation project(':powerfulscrollview')
 }
     
 //apply from:'https://raw.githubusercontent.com/lsjwzh/widget.gradle/master/upload.gradle'
